--- a/style.css
+++ b/style.css
@@ -44,7 +44,9 @@ body{
     display:none;
   animation: flyIn 0.8s ease-out forwards;
   position:absolute;
-  bottom: 364px;
+  top:0px;
+  left: 0px;
+  border:none;
   
 
 }
@@ -57,5 +59,17 @@ body{
     margin:auto;
     margin-top: 30px;
     
+
+}
+#caption{
+    
+    position:absolute;
+    display:none;
+    animation: flyIn 0.8s ease-out forwards;
+    
+    border:none;
+    bottom: 26px; /* distance from bottom */
+    left: 32%;
+    transform: translateX(-50%);
 
 }
